# ServerClientApp

./: CMakeLists.txt  ServerPartApp.sln
ClientPartApp/: Client.cpp  ClientPartApp.vcxproj
ServerPartApp/: ServerPart.cpp  ServerPartApp.vcxproj  ServerPartApp.vcxproj.filters
src/client/: client.cpp  client.h  main.cpp
src/common/: common.cpp  common.h
src/include/: CMakeLists.txt
src/server/: main.cpp  server.cpp  server.h
